examples/test/testpolicy2020.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2020
  namespace: namespace172
spec:
  podSelector:
    matchLabels:
      key21: value41
      key34: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value13
          key23: value2
          key42: value0
      podSelector:
        matchLabels:
          key39: value24
          key18: value4
